(lang dune 1.11)
(package
  (name code-map)
  (synopsis "Map and display source code.")
  (description "Code mapping and display to be used in parsers.")
)
(authors "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(maintainers "Timothée Haudebourg <timothee.haudebourg@irisa.fr>")
(generate_opam_files true)
